fix blank designation contrast for tile

--- a/liwords-ui/src/gameroom/scss/gameroom.scss
+++ b/liwords-ui/src/gameroom/scss/gameroom.scss
@@ -1667,7 +1667,7 @@ p.rune {
   }
 }
 .ant-modal-body {
-  p {
+  p :not(.rune) {
     @include colorModed() {
       color: m($gray-extreme);
     }
